<resources>
    <string name="app_name">Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="what_is_in_your_mind">O czymś przypomnieć?</string>
    <string name="general">Ogólne</string>
    <string name="add">Dodaj</string>
    <string name="no_events">Brak dodanych wydarzeń</string>
    <string name="description">opis</string>
    <string name="title">tytuł</string>
    <string name="can_not_be_empty">Nie może być puste!</string>
    <string name="choice_date">Wybierz datę</string>
    <string name="choice_time">Wybierz godzinę</string>
    <string name="choice_time_first">Najpierw wybierz czas!</string>
    <string name="choice_date_first">Najpierw wybierz datę!</string>
    <string name="save">Zapisz</string>
    <string name="note_saved">Zapisano</string>
    <string name="Title">Tytuł: </string>
    <string name="Body">Treść: </string>
</resources>
