<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/dialogDescriptionTitleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elegantTextHeight="true"
        android:ems="8"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialogDescriptionBodyET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elegantTextHeight="true"
        android:ems="8"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/choice_time"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dialogDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/choice_date"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/dialogAddBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/fab_color"
        android:drawableEnd="@drawable/ic_add"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

</LinearLayout>